
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uchar ;


 int False ;
 int True ;
 int err (char*) ;
 int gethex (char) ;
 int* nil ;
 int* realloc (int*,int) ;
 int strlen (char*) ;

__attribute__((used)) static int
parsebytes(char * p, uchar ** bytesp, int * np)
{
 uchar * bytes;
 uchar byte;
 int n;

 n = strlen(p);
 if(n % 2)
 {
  err("the byte stream must be an even length");
  return False;
 }

 n = 0;
 bytes = nil;

 while(p[0] && p[1])
 {
  byte = gethex(p[0]) << 4 | gethex(p[1]);
  bytes = realloc(bytes, (n + 1) * sizeof *bytes);
  bytes[n++] = byte;
  p += 2;
 }

 *bytesp = bytes;
 *np = n;

 return True;
}
